# OEEG

./: .gitignore  CRON_UPDATE.py  Dockerfile  Ertragsdaten.ipynb  allgemein.csv  backend.py  backend_leistung.py  calendar_plot.py  detail_class.ipynb  detail_class.py  detail_new.py  detaildaten.ipynb  detaildaten.parquet  errors  forecast.py  nb_detaildaten.ipynb  nb_updatedata.ipynb  overview.py  plot_tag.ipynb  pyproject.toml  requirements.txt  standorte_data.pkl  streamlit_app.py  streamlit_detail.py  streamlit_main.py  streamlit_overview.py  test.ipynb  ui_calendar.py  ui_tagesleistung.py  ui_utils.py  update_ertragsdaten.py  update_leistungsdaten.py  utils.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
app/: dataoverview.pkl
app/data/: badboll_quality.pkl  ertrag.parquet  esslingen_quality.pkl  geislingen_quality.pkl  holzgerlingen_quality.pkl  hospitalhof_quality.pkl  karlsruhe_quality.pkl  leistung.parquet  mettingen_quality.pkl  muensingen_quality.pkl  overview.pkl  tuebingen_quality.pkl  waiblingen_quality.pkl
data/: badboll_quality.pkl  ertrag.parquet
legacy/: backend_leistung.py  detail.py  errors.py  leistung.py  nb_updatedata.ipynb  overview.pkl  streamlit_detail.py  streamlit_detail_new.py  ui_tagesleistung.py
legacy/app/data/: badboll_quality.pkl  esslingen_quality.pkl  geislingen_quality.pkl  hospitalhof_quality.pkl  karlsruhe_quality.pkl  leistung.parquet  mettingen_quality.pkl  muensingen_quality.pkl  waiblingen_quality.pkl
src/: ertrag.py  leistung.py  standort.py
src/ui/: anlagenfoto.py  day.py  ertrag.py  year.py
(+1 files in other folders)
