[project]
name = "visualisierung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "js2py>=0.74",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "plotly-resampler>=0.10.0",
    "streamlit>=1.43.2",
    "tqdm>=4.67.1",
]
